--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.471.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-places-autocomplete": "^4.1.0",
     "react-router-dom": "^6.28.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
