--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "firebase": "^11.2.0",
     "lucide-react": "^0.471.1",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
