--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "embla-carousel-react": "^8.5.2",
     "firebase": "^11.2.0",
     "lucide-react": "^0.471.1",
     "next-themes": "^0.4.4",
@@ -28,8 +29,10 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.1",
     "sonner": "^1.7.2",
+    "swiper": "^11.2.2",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vanilla-infinite-marquee": "^1.0.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
