--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-popover": "^1.1.5",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -21,6 +23,7 @@
     "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.2",
     "firebase": "^11.2.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.471.1",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
