--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.2",
     "firebase": "^11.2.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.471.1",
     "next-themes": "^0.4.4",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-places-autocomplete": "^4.1.0",
